pkg/generator/testdata/golden/with-route-containerport.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
  name: default-peer-auth
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  mtls:
    mode: STRICT
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-deny-all
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-all-in-ns
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - to:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-kube-dns
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-istiod
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 15012
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-deny-all
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-allow-all-in-ns
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-allow-prometheus-to-istio-sidecar
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 15020
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
  name: grafana
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  gateways:
  - istio-gateway/public-ingressgateway
  hosts:
  - grafana.bigbang.mil
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
status: {}
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
  name: grafana-internal
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  hosts:
  - grafana.bigbang.mil
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-ingress-to-grafana-3000-from-ns-istio-gateway-pod-public-ingressgateway
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: public-ingressgateway
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Ingress
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: grafana
  name: grafana-public-ingressgateway-authz-policy
  namespace: monitoring
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: grafana
    uid: 11111111-1111-1111-1111-111111111111
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-gateway/sa/public-ingressgateway-ingressgateway-service-account
    to:
    - operation:
        ports:
        - "3000"
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
status: {}
