pkg/generator/testdata/golden/with-shorthand.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
  name: default-peer-auth
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  mtls:
    mode: STRICT
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-deny-all
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-all-in-ns
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - to:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-kube-dns
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-egress-allow-istiod
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 15012
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: istiod
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-deny-all
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-allow-all-in-ns
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: default-ingress-allow-prometheus-to-istio-sidecar
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 15020
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    generated.network-policies.bigbang.dev/local-key: '*'
    generated.network-policies.bigbang.dev/remote-key: udp://kube-system/kube-dns:53
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-egress-from-any-pod-to-ns-kube-system-pod-kube-dns-udp-port-53
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: kube-dns
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    generated.network-policies.bigbang.dev/local-key: example-app
    generated.network-policies.bigbang.dev/remote-key: data/postgres:5432
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-egress-from-example-app-to-ns-data-pod-postgres-tcp-port-5432
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: data
      podSelector:
        matchLabels:
          app.kubernetes.io/name: postgres
  podSelector:
    matchLabels:
      app.kubernetes.io/name: example-app
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    generated.network-policies.bigbang.dev/local-key: example-app
    generated.network-policies.bigbang.dev/remote-key: data/redis:[6379,6380]
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: egress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-egress-from-example-app-to-ns-data-pod-redis-tcp-ports-6379-6380
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  egress:
  - ports:
    - port: 6379
      protocol: TCP
    - port: 6380
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: data
      podSelector:
        matchLabels:
          app.kubernetes.io/name: redis
  podSelector:
    matchLabels:
      app.kubernetes.io/name: example-app
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    generated.network-policies.bigbang.dev/local-key: example-app
    generated.network-policies.bigbang.dev/remote-key: monitoring/prometheus
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-ingress-to-example-app-tcp-port-15020-from-ns-monitoring-pod-prometheus
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 15020
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: example-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    generated.network-policies.bigbang.dev/local-key: example-app
    generated.network-policies.bigbang.dev/remote-key: istio-gateway/public-ingressgateway
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    network-policies.bigbang.dev/direction: ingress
    network-policies.bigbang.dev/source: bigbang-operator
  name: allow-ingress-to-example-app-tcp-port-8080-from-ns-istio-gateway-pod-public-ingressgateway
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: public-ingressgateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: example-app
  policyTypes:
  - Ingress
